// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pie-chart-metrics Renders \`pie-chart-metrics\` with custom props 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
    Custom title
  </h4>
  <div
    class="pie-chart-metrics__chart kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="400"
        id="pie-chart"
        style="display: block; box-sizing: border-box; height: 400px; width: 700px;"
        width="700"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;

exports[`pie-chart-metrics Renders \`pie-chart-metrics\` with default props 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <!---->
</div>
`;

exports[`pie-chart-metrics Renders \`pie-chart-metrics\` with empty data 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <div
    class="pie-chart-metrics__chart kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="400"
        id="pie-chart"
        style="display: block; box-sizing: border-box; height: 400px; width: 700px;"
        width="700"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;

exports[`pie-chart-metrics Renders \`pie-chart-metrics\` with number labels props 1`] = `
<div
  class="layout kpi-widget column align-center"
>
  <h4
    class="kpi-widget__title"
  >
  </h4>
  <div
    class="pie-chart-metrics__chart kpi-widget__chart"
  >
    <div
      class=""
    >
      <canvas
        height="400"
        id="pie-chart"
        style="display: block; box-sizing: border-box; height: 400px; width: 700px;"
        width="700"
      />
    </div>
    <kpi-chart-export-actions-stub
      chart="[object Object]"
      class="mt-4"
    />
  </div>
</div>
`;
